call activateTaskAtIndex on the proper object

now the appletinterface is the plasmoid root object and is the one which
provides the activateTaskAtIndex function, so don't iterate on its
children anymore

BUG:473922